--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -26,7 +26,7 @@
     }
 
     .question {
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
 
     #quiz-result {
@@ -127,9 +127,9 @@
         </p>
         <p>
           <textarea id="q1-source" rows="5" readonly>
-“Productivity is not just about doing more. It's about creating more impact with less work.” – Unknown
+“Efficiency is doing things right; effectiveness is doing the right things.” – Peter Drucker
 
-Mastering keyboard shortcuts empowers you to work smarter and increase efficiency in your daily tasks.
+Mastering keyboard shortcuts is a step towards both efficiency and effectiveness in your daily tasks.
           </textarea>
         </p>
         <p>
@@ -143,17 +143,17 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
           2. Use the keyboard shortcut to find and highlight all occurrences of the word "efficiency" in the passage below.
         </p>
         <p id="q2-passage">
-          Efficiency is key in achieving success. By focusing on efficiency, you can accomplish more with less effort. Implementing efficient methods in your workflow allows for better time management and productivity.
+          Efficiency is a crucial component in achieving success. By focusing on efficiency, you can accomplish more with less effort. Implementing efficient methods in your workflow allows for better time management and productivity.
         </p>
       </div>
 
-      <!-- Question 3: Undo Deletion -->
+      <!-- Question 3: Undo and Redo Actions -->
       <div class="question">
         <p class="question-title">
-          3. Delete the paragraph below and then restore it using the undo keyboard shortcut.
+          3. Edit the paragraph below: delete the text, then use the undo shortcut to restore it, and finally use the redo shortcut to remove it again.
         </p>
         <p contenteditable="true" id="q3-paragraph">
-          This paragraph contains important information that you might need later. Please delete it using your keyboard and then bring it back using the appropriate undo shortcut.
+          This paragraph contains important information that you might need later. Please delete it using your keyboard, undo the deletion, and then redo it using the appropriate keyboard shortcuts.
         </p>
       </div>
 
@@ -168,16 +168,16 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
       <!-- Question 5: Graded Multiple Choice -->
       <div class="question">
         <p class="question-title">
-          5. Which keyboard shortcut will you use to redo an action that you have just undone?
+          5. Which keyboard shortcut will you use to cut selected text?
         </p>
         <label>
-          <input type="radio" name="q5" value="Ctrl+Y"> Ctrl + Y
-        </label><br>
-        <label>
-          <input type="radio" name="q5" value="Ctrl+Z"> Ctrl + Z
-        </label><br>
-        <label>
           <input type="radio" name="q5" value="Ctrl+X"> Ctrl + X
+        </label><br>
+        <label>
+          <input type="radio" name="q5" value="Ctrl+C"> Ctrl + C
+        </label><br>
+        <label>
+          <input type="radio" name="q5" value="Ctrl+V"> Ctrl + V
         </label>
       </div>
 
@@ -194,9 +194,9 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
     let quizAnswers = {
       q1: '',
       q2: false,
-      q3: false,
-      q4: false,
-      q5: ''
+      q3Undo: false,
+      q3Redo: false,
+      q4: false
     };
 
     // Question 1: Monitor Paste Event
@@ -220,27 +220,31 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
       }
     });
 
-    // Question 3: Undo Deletion
+    // Question 3: Undo and Redo Actions
     let q3Paragraph = document.getElementById('q3-paragraph');
     let q3OriginalContent = q3Paragraph.innerHTML;
+    let q3History = [q3OriginalContent];
 
     q3Paragraph.addEventListener('input', function() {
-      if (q3Paragraph.innerText.trim() === '') {
-        quizAnswers.q3Deleted = true;
-        alert('Paragraph deleted! Now use the undo shortcut to restore it.');
-      }
+      q3History.push(q3Paragraph.innerHTML);
     });
 
     document.addEventListener('keydown', function(e) {
+      // Undo action
       if (e.ctrlKey && (e.key === 'z' || e.key === 'Z')) {
-        if (quizAnswers.q3Deleted && !quizAnswers.q3Restored) {
-          quizAnswers.q3 = true;
-          quizAnswers.q3Restored = true;
-          // Wait for the undo operation to happen in the browser
-          setTimeout(() => {
-            alert('Paragraph restored!');
-          }, 100);
+        e.preventDefault();
+        if (q3History.length > 1) {
+          q3History.pop();
+          q3Paragraph.innerHTML = q3History[q3History.length - 1];
+          quizAnswers.q3Undo = true;
         }
+      }
+      // Redo action
+      else if (e.ctrlKey && (e.key === 'y' || e.key === 'Y')) {
+        e.preventDefault();
+        // For simplicity, assume redo restores the deleted content
+        q3Paragraph.innerHTML = '';
+        quizAnswers.q3Redo = true;
       }
     });
 
@@ -249,7 +253,7 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
       if (e.ctrlKey && (e.key === 's' || e.key === 'S')) {
         e.preventDefault();
         quizAnswers.q4 = true;
-        alert('Document saved successfully!');
+        // No pop-up; action is recorded silently
       }
     });
 
@@ -275,12 +279,12 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
         explanations += '<p><strong>Question 2:</strong> Incorrect. You needed to press Ctrl+F and search for "efficiency".</p>';
       }
 
-      // Question 3: Check if paragraph was restored
-      if (quizAnswers.q3) {
+      // Question 3: Check if undo and redo actions were performed
+      if (quizAnswers.q3Undo && quizAnswers.q3Redo) {
         score += 1;
-        explanations += '<p><strong>Question 3:</strong> Correct! You deleted and then restored the paragraph using Ctrl+Z.</p>';
+        explanations += '<p><strong>Question 3:</strong> Correct! You deleted the paragraph, used Ctrl+Z to undo the deletion, and then used Ctrl+Y to redo it.</p>';
       } else {
-        explanations += '<p><strong>Question 3:</strong> Incorrect. You needed to delete the paragraph and then press Ctrl+Z to undo the deletion.</p>';
+        explanations += '<p><strong>Question 3:</strong> Incorrect. You needed to delete the paragraph, undo the deletion with Ctrl+Z, and then redo it with Ctrl+Y.</p>';
       }
 
       // Question 4: Check if Save shortcut was used
@@ -293,11 +297,11 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
 
       // Question 5: Check the selected answer
       let q5 = document.querySelector('input[name="q5"]:checked');
-      if (q5 && q5.value === 'Ctrl+Y') {
+      if (q5 && q5.value === 'Ctrl+X') {
         score += 1;
-        explanations += '<p><strong>Question 5:</strong> Correct! Ctrl+Y is used to redo an action that has been undone.</p>';
+        explanations += '<p><strong>Question 5:</strong> Correct! Ctrl+X is used to cut selected text.</p>';
       } else {
-        explanations += '<p><strong>Question 5:</strong> Incorrect. The correct answer is Ctrl+Y, which redoes an action.</p>';
+        explanations += '<p><strong>Question 5:</strong> Incorrect. The correct answer is Ctrl+X, which cuts selected text.</p>';
       }
 
       // Display the result and explanations
@@ -305,6 +309,21 @@ Mastering keyboard shortcuts empowers you to work smarter and increase efficienc
       resultElement.style.display = 'block';
       resultElement.innerHTML = 'You scored ' + score + ' out of 5!';
       resultElement.innerHTML += '<div class="explanation">' + explanations + '</div>';
+
+      // Reset the quiz after submission
+      document.getElementById('quiz-form').reset();
+      quizAnswers = {
+        q1: '',
+        q2: false,
+        q3Undo: false,
+        q3Redo: false,
+        q4: false
+      };
+      // Reset contenteditable paragraph and passage
+      q3Paragraph.innerHTML = q3OriginalContent;
+      document.getElementById('q2-passage').innerHTML = `
+        Efficiency is a crucial component in achieving success. By focusing on efficiency, you can accomplish more with less effort. Implementing efficient methods in your workflow allows for better time management and productivity.
+      `;
     }
   </script>
 </body>
