Update stylesheet path

--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Interactive Keyboard Shortcuts Quiz</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
   <div class="card">
